--- a/mysite/templates/footer.html
+++ b/mysite/templates/footer.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h3 class="text-primary mb-4">Yangiliklarda boxabar bo'ling</h3>
+            <h3 class="text-primary mb-4">Yangiliklardan boxabar bo'ling</h3>
             <form action="">
                 <div class="form-group">
                     <input type="text" class="form-control border-0 py-4" placeholder="Ismingiz" required="required"/>
