--- a/mysite/templates/navbar.html
+++ b/mysite/templates/navbar.html
@@ -18,6 +18,7 @@
                     <a href="#team" class="nav-item nav-link">Jamoamiz</a>
                     <a href="#comments" class="nav-item nav-link">Fikrlar</a>
                     <a href="#register" class="nav-item nav-link">Aloqa</a>
+                    <a href="https://shohjahontmi.pythonanywhere.com/admin/" style="color: red" class="nav-item nav-link">Kirish</a>
                 </div>
                 <a href="tel:+998991035505" class="btn btn-primary px-4">Kursga qo'shilish</a>
             </div>
