--- a/mysite/templates/home/index.html
+++ b/mysite/templates/home/index.html
@@ -177,7 +177,7 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow animate__animated animate__zoomIn">
                 {% for comment in comments %}
-                <div class="testimonial-item px-3">
+                <div class="testimonial-item px-3" style="margin-bottom: 30px;">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
                         {{ comment.fikri }}
